--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,15 @@
 .raw {
   height: 10px;
   padding: 0;
+  margin: 0;
 }
 
 .cell, .cell--active {
   display: inline-block;
   width: 10px;
   height: 10px;
+  padding: 0;
+  margin: 0;
 }
 
 .cell--active {
