--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,13 +1,10 @@
 .row {
-  height: 10px;
-  padding: 0;
+  display: flex;
 }
 
 .cell, .cell--active {
-  display: inline-block;
   width: 10px;
   height: 10px;
-  padding: 0;
 }
 
 .cell--active {
